--- a/FrontEnd/pages/login.html
+++ b/FrontEnd/pages/login.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Connexion | Sophie Bluel - Architecte d'intérieur</title>
+	<link rel="icon" href="/logo.ico" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,9 +16,12 @@
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
-			<a href="../index.html#portfolio"><li>projets</li></a>
-			<a href="../index.html#contact"><li >Contact</li></a>
-			<a href="#"><li class="login active">Login</li></a>
+			<li><a href="../index.html">projets</a></li>
+			<li><a href="../index.html">contact</a></li>
+			<li class="active">
+				<a class="login-button" href="./login.html">login</a>
+				<a class="logout-button display-none">logout</a>
+			</li>
 			<li><img src="../assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -35,7 +39,7 @@
               <input type="password" id="password" name="password" required autocomplete="current-password">
             </div>
             <div class="btn btn-connexion">
-              <input type="submit" value="Se connecter">
+              <input type="submit" id="login-submit" value="Se connecter">
             </div>
           </form>
           <a class="forget" href="#">Mot de passe oublié</a>
