--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -15,14 +15,24 @@
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
-			<a href="#portfolio"><li>projets</li></a>
-			<a href="#contact"><li >Contact</li></a>
-			<a href="/FrontEnd/pages/login.html"><li class="login">Login</li></a>
+			<li><a href="index.html">projets</a></li>
+			<li><a href="index.html">contact</a></li>
+			<li class="active">
+				<a class="login-button" href="./pages/login.html">login</a>
+				<a class="logout-button display-none">logout</a>
+			</li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
 </header>
 <main>
+	<!-- Modal -->
+    <div class="modal-overlay display-none">
+		<div class="modal-content">
+			<i class="close-modal-button fa-solid fa-xmark fa-lg" aria-hidden="true"></i>
+			<h2 class="modal-title">Galerie photo</h2>
+		</div>
+	</div>
 	<section id="introduction">
 		<figure>
 			<img src="./assets/images/sophie-bluel.png" alt="">
@@ -35,7 +45,15 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
+		<div class="portfolio-modifier">
+			<h2>Mes Projets</h2>
+			<!-- Modal -->
+			<a class="edit-button">
+				<i class="fa-regular fa-pen-to-square" aria-hidden="true"></i>
+				<span>modifier</span>
+			</a>
+			<!--  -->
+		</div>
 		<div class="gallery">
 			<figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
