--- a/FrontEnd/pages/login.html
+++ b/FrontEnd/pages/login.html
@@ -7,6 +7,9 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+		integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+		crossorigin="anonymous" referrerpolicy="no-referrer">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="../assets/style.css">
 </head>
@@ -17,7 +20,10 @@
 		<ul>
 			<a href="../index.html#portfolio"><li>projets</li></a>
 			<a href="../index.html#contact"><li >Contact</li></a>
-			<a href="#"><li class="login active">Login</li></a>
+			<li class="active">
+				<a class="login-button" href="./pages/login.html">login</a>
+				<a class="logout-button display-none">logout</a>
+			</li>
 			<li><img src="../assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -35,7 +41,7 @@
               <input type="password" id="password" name="password" required autocomplete="current-password">
             </div>
             <div class="btn btn-connexion">
-              <input type="submit" value="Se connecter">
+				<input type="submit" id="login-submit" value="Se connecter">
             </div>
           </form>
           <a class="forget" href="#">Mot de passe oublié</a>
