--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -7,6 +7,9 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+		integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+		crossorigin="anonymous" referrerpolicy="no-referrer">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 </head>
@@ -27,10 +30,12 @@
 </header>
 <main>
 	<!-- Modal -->
-    <div class="modal-overlay display-none">
+    <div class="modal-overlay display-none" id="modal">
 		<div class="modal-content">
 			<i class="close-modal-button fa-solid fa-xmark fa-lg" aria-hidden="true"></i>
 			<h2 class="modal-title">Galerie photo</h2>
+			<div class="modal-gallery"></div>
+			<button class="btn-modal">Ajouter une photo</button>
 		</div>
 	</div>
 	<section id="introduction">
