--- a/FrontEnd/pages/login.html
+++ b/FrontEnd/pages/login.html
@@ -19,7 +19,7 @@
 	<nav>
 		<ul>
 			<a href="../index.html#portfolio"><li>projets</li></a>
-			<a href="../index.html#contact"><li >Contact</li></a>
+			<a href=""><li >Contact</li></a>
 			<li class="active">
 				<a class="login-button" href="./pages/login.html">login</a>
 				<a class="logout-button display-none">logout</a>
