fonction post et delete img

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -46,7 +46,7 @@
 							<img src="" alt="Prévisualisation de l'image"
 								class="preview-img" id="preview">
 							<div class="btn-upload">
-								<input type="file" id="imageUpload" name="img" required>
+								<input type="file" id="imageUpload" name="image" required>
 								+ Ajouter photo
 							</div>
 							<p class="upload-text">jpg, png : 4mo max</p>
@@ -56,10 +56,10 @@
 						<input type="text" name="title" id="title" required>
 						<label for="category">Catégorie</label>
 						<select name="category" id="category" required>
-							<option value="" label=" "></option>
+							<option value="" label=" "></option> 
 						</select>
 						<hr>
-						<input class="modal-img-button" type="submit" value="Envoyer">
+						<input class="modal-img-button" type="submit" value="Valider">
 					</div>
 				</form>
 			</div>
